# camera_lidar_calibration

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml  config_logitech.yaml
data/: data_v2.txt  image_points.txt  laser_points.txt  laser_test_points.txt  laser_test_points_v2.txt
imgs/: image_lists.txt
include/: error_types_v2.h
src/: camera_lidar_calibration.cc  camera_lidar_calibration_v2.cc  config.cc  corner_detecter.cc  detect_plane_with_aruco.cc  reprojection.cc
